--- a/app/src/main/res/layout/custom_actionbar.xml
+++ b/app/src/main/res/layout/custom_actionbar.xml
@@ -6,16 +6,17 @@
 
     android:id="@+id/main_toolbar"
     android:layout_width="match_parent"
-    android:layout_height="80dp"
+    android:layout_height="70dp"
     android:background="@color/white">
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="100dp"
-        android:layout_height="80dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_centerVertical="true"
-        android:layout_marginLeft="140dp"
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:src="@drawable/logo" />
 
     <ImageButton
