--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,7 +81,7 @@
         android:layout_marginEnd="12dp"
         android:layout_marginTop="4dp"
         android:gravity="bottom|center"
-        android:text="@string/poi_button"
+        android:text="@string/activities_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
