--- a/app/src/main/res/layout/custom_main_menu_header.xml
+++ b/app/src/main/res/layout/custom_main_menu_header.xml
@@ -20,7 +20,7 @@
         android:src="@drawable/logo" />
 
     <ImageButton
-        android:id="@+id/imageButton"
+        android:id="@+id/setting_image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
