Added Header to Settings Layout

--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -6,24 +6,32 @@
     android:layout_height="match_parent"
     tools:context="ahmed.niaz.chinatown_tour.SettingsActivity">
 
+    <include
+        android:id="@+id/include2"
+        layout="@layout/custom_main_menu_header"
+        app:layout_constraintBottom_toTopOf="@+id/transport_landing_pg"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <TextView
         android:id="@+id/allow_location_textView"
         android:layout_width="200dp"
         android:layout_height="45dp"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:gravity="center_vertical|left"
         android:text="@string/allow_location_textview"
         android:textAppearance="@style/TextAppearance.AppCompat"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/include2" />
 
     <Switch
         android:id="@+id/allow_location_on_off_switch"
         android:layout_width="0dp"
         android:layout_height="45dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:switchTextAppearance="@style/TextAppearance.AppCompat"
         android:textAppearance="@style/TextAppearance.AppCompat.Button"
@@ -107,8 +115,10 @@
         android:hint="@string/feedback_edittext"
         app:layout_constraintBottom_toTopOf="@+id/submit_feedback_button"
         app:layout_constraintEnd_toEndOf="@+id/feedback_textView"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="@+id/feedback_textView"
-        app:layout_constraintTop_toBottomOf="@+id/email_editText" />
+        app:layout_constraintTop_toBottomOf="@+id/email_editText"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </android.support.constraint.ConstraintLayout>
