--- a/app/src/main/res/layout/hotels.xml
+++ b/app/src/main/res/layout/hotels.xml
@@ -15,48 +15,71 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:layout_width="365dp"
-        android:layout_height="468dp"
-        android:layout_marginBottom="16dp"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="0dp"
+        android:layout_height="491dp"
+        android:layout_marginTop="65dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent">
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textView3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:text="TextView" />
+            android:layout_marginTop="24dp"
+            android:text="Hotel 1"
+            app:layout_constraintHorizontal_bias="0.501"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <ImageSwitcher
             android:id="@+id/img_switcher"
-            android:layout_width="200dp"
-            android:layout_height="200dp"
-            android:layout_below="@+id/textView"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="72dp" />
+            android:layout_width="366dp"
+            android:layout_height="196dp"
+            android:layout_marginTop="40dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView3">
 
-        <Button
-            android:id="@+id/button3"
+        </ImageSwitcher>
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="10dp"
+            android:layout_height="10dp"
+            android:layout_marginStart="148dp"
+            android:layout_marginTop="212dp"
+            app:layout_constraintStart_toStartOf="@+id/img_switcher"
+            app:layout_constraintTop_toTopOf="@+id/img_switcher"
+            app:srcCompat="@drawable/active_circle" />
+
+        <ImageView
+            android:id="@+id/imageView6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_below="@+id/img_switcher"
-            android:layout_marginEnd="18dp"
-            android:layout_marginTop="24dp"
-            android:text="Button" />
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="212dp"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/imageView5"
+            app:layout_constraintTop_toTopOf="@+id/img_switcher"
+            app:srcCompat="@drawable/non_active_circle" />
 
-        <Button
-            android:id="@+id/button4"
-            android:layout_width="wrap_content"
+        <ImageView
+            android:id="@+id/imageView7"
+            android:layout_width="12dp"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/button3"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="22dp"
-            android:text="Button" />
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="212dp"
+            app:layout_constraintStart_toEndOf="@+id/imageView6"
+            app:layout_constraintTop_toTopOf="@+id/img_switcher"
+            app:srcCompat="@drawable/non_active_circle" />
 
-    </RelativeLayout>
+    </android.support.constraint.ConstraintLayout>
 
 </android.support.constraint.ConstraintLayout>
