--- a/app/src/main/res/layout/custom_main_menu_header.xml
+++ b/app/src/main/res/layout/custom_main_menu_header.xml
@@ -4,19 +4,19 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
 
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/main_toolbar"
     android:layout_width="match_parent"
     android:layout_height="70dp"
     android:background="@color/white">
 
     <ImageView
-        android:id="@+id/imageView1"
-        android:layout_width="wrap_content"
+        android:id="@+id/appIcon"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:layout_centerInParent="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="95dp"
         android:src="@drawable/logo" />
 
     <ImageButton
