--- a/app/src/main/res/layout/food.xml
+++ b/app/src/main/res/layout/food.xml
@@ -44,13 +44,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
 
-            <android.support.v4.widget.CircleImageView
-                android:id="@+id/image_restaurant1"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:scaleType="centerCrop"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/restaurant_1_front_image"/>
+
 
             <TextView
                 android:layout_width="wrap_content"
@@ -58,10 +52,10 @@
                 android:layout_alignParentBottom="true"
                 android:layout_alignParentStart="true"
                 android:text="@string/restaurant1_name"
-                android:textColor="@color/white" />
+                android:textColor="@android:color/black" />
 
         </RelativeLayout>
-    <!--Restaurant 2 -->
-
     </android.support.v7.widget.CardView>
+
+    <!-- Restaurant 2 -->
 </android.support.constraint.ConstraintLayout>
