--- a/app/src/main/res/layout/food.xml
+++ b/app/src/main/res/layout/food.xml
@@ -49,8 +49,7 @@
                 android:layout_width="90dp"
                 android:layout_height="90dp"
                 android:scaleType="centerCrop"
-                android:layout_centerHorizontal="true"
-                android:src="@drawable/restaurant_1_front_image"/>
+                android:layout_centerHorizontal="true"/>
 
             <TextView
                 android:layout_width="wrap_content"
