--- a/app/src/main/res/layout/hotel_landing.xml
+++ b/app/src/main/res/layout/hotel_landing.xml
@@ -13,11 +13,16 @@
 
     <ListView
         android:id="@+id/listViewID"
-        android:layout_width="348dp"
-        android:layout_height="466dp"
+        style="@style/Widget.AppCompat.Light.ListView.DropDown"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
+        android:divider="?attr/colorError"
+        android:dividerHeight="5dp"
+        android:footerDividersEnabled="true"
+        android:headerDividersEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include" />
