--- a/app/src/main/res/layout/hotel_landing.xml
+++ b/app/src/main/res/layout/hotel_landing.xml
@@ -23,6 +23,7 @@
         android:dividerHeight="5dp"
         android:footerDividersEnabled="true"
         android:headerDividersEnabled="true"
+        android:paddingBottom="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include" />
