--- a/app/src/main/res/layout/specific_hotel_content.xml
+++ b/app/src/main/res/layout/specific_hotel_content.xml
@@ -28,7 +28,7 @@
         app:layout_constraintVertical_bias="0.0">
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/spec_hotel_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
@@ -45,7 +45,7 @@
             android:layout_marginTop="40dp"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3">
+            app:layout_constraintTop_toBottomOf="@+id/spec_hotel_name">
 
         </ImageSwitcher>
 
