--- a/app/src/main/res/layout/fragment_busses.xml
+++ b/app/src/main/res/layout/fragment_busses.xml
@@ -3,11 +3,13 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/textView2"
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="184dp"
-        android:text="TextView" />
+        android:layout_marginEnd="149dp"
+        android:layout_marginTop="248dp"
+        android:text="Busses"
+        android:textSize="24sp" />
 </RelativeLayout>
