--- a/app/src/main/res/layout/custom_main_menu_header.xml
+++ b/app/src/main/res/layout/custom_main_menu_header.xml
@@ -5,27 +5,27 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
 
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_toolbar"
-    android:layout_width="match_parent"
-    android:layout_height="70dp"
-    android:background="@color/white">
+    android:layout_width="100dp"
+    android:layout_height="100dp"
+    android:background="@null">
+
 
     <ImageView
         android:id="@+id/appIcon"
-        android:layout_width="200dp"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="50dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="95dp"
-        android:src="@drawable/logo" />
+        app:srcCompat="@drawable/chinatown_icon" />
 
     <ImageButton
         android:id="@+id/setting_image_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:layout_marginRight="20dp"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/appIcon"
         android:background="@null"
         android:src="@drawable/settings_gear" />
 
