--- a/app/src/main/res/layout/main_menu.xml
+++ b/app/src/main/res/layout/main_menu.xml
@@ -1,30 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/main_menu_image1"
+    android:minWidth="@dimen/fab_margin"
+    android:paddingBottom="16dp"
+    android:paddingLeft="16dp"
+    android:paddingRight="16dp"
+    android:paddingTop="16dp"
     tools:context="ahmed.niaz.chinatown_tour.MainActivity">
 
     <include
+        android:id="@+id/include3"
         layout="@layout/custom_main_menu_header"
+        android:layout_height="58dp"
         app:layout_constraintBottom_toTopOf="@+id/transport_landing_pg"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/transport_landing_pg"
-        android:layout_width="0dp"
-        android:layout_height="155dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="4dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="80dp"
-        android:gravity="bottom|center"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="400dp"
+        android:gravity="center"
         android:text="@string/transport_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+        android:visibility="visible"
         app:layout_constraintEnd_toStartOf="@+id/food_landing_pg"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -33,12 +42,12 @@
 
     <Button
         android:id="@+id/hotel_landing_pg"
-        android:layout_width="0dp"
-        android:layout_height="155dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:gravity="bottom|center"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
         android:text="@string/hotel_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         app:layout_constraintEnd_toStartOf="@+id/poi_landing_pg"
@@ -48,12 +57,12 @@
 
     <Button
         android:id="@+id/itinerary_landing_pg"
-        android:layout_width="0dp"
-        android:layout_height="155dp"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
         android:layout_marginEnd="4dp"
-        android:layout_marginStart="12dp"
-        android:layout_marginTop="4dp"
-        android:gravity="bottom|center"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
         android:text="@string/itinerary_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         app:layout_constraintEnd_toStartOf="@+id/history_landing_pg"
@@ -63,24 +72,27 @@
 
     <Button
         android:id="@+id/food_landing_pg"
-        android:layout_width="0dp"
-        android:layout_height="155dp"
-        android:layout_marginEnd="12dp"
-        android:gravity="bottom|center"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="300dp"
+        android:gravity="center"
         android:text="@string/food_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-        app:layout_constraintBaseline_toBaselineOf="@+id/transport_landing_pg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/transport_landing_pg" />
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/transport_landing_pg"
+        app:layout_constraintTop_toBottomOf="@+id/include3" />
 
     <Button
         android:id="@+id/poi_landing_pg"
-        android:layout_width="0dp"
-        android:layout_height="155dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="4dp"
-        android:gravity="bottom|center"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
         android:text="@string/activities_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         app:layout_constraintEnd_toEndOf="parent"
@@ -90,15 +102,17 @@
 
     <Button
         android:id="@+id/history_landing_pg"
-        android:layout_width="0dp"
-        android:layout_height="155dp"
-        android:layout_marginEnd="12dp"
-        android:layout_marginTop="4dp"
-        android:gravity="bottom|center"
+        android:layout_width="100dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginTop="24dp"
+        android:gravity="center"
         android:text="@string/history_button"
         android:textAppearance="@style/TextAppearance.AppCompat.Caption"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintStart_toEndOf="@+id/itinerary_landing_pg"
         app:layout_constraintTop_toBottomOf="@+id/poi_landing_pg" />
 
