--- a/app/src/main/res/layout/specific_hotel_content.xml
+++ b/app/src/main/res/layout/specific_hotel_content.xml
@@ -112,28 +112,29 @@
 
             <Button
                 android:id="@+id/button2"
-                android:layout_width="75dp"
-                android:layout_height="40dp"
-                android:layout_marginEnd="12dp"
-                android:text="Button"
+                android:layout_width="50dp"
+                android:layout_height="38dp"
+                android:layout_marginEnd="48dp"
+                android:background="@drawable/map_btn_img"
                 app:layout_constraintEnd_toStartOf="@+id/button3"
                 app:layout_constraintTop_toTopOf="@+id/button3" />
 
             <Button
                 android:id="@+id/button3"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_marginTop="16dp"
-                android:text="Button"
+                android:layout_width="52dp"
+                android:layout_height="38dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="32dp"
+                android:background="@drawable/website_btn_img"
                 app:layout_constraintStart_toStartOf="@+id/navDot1"
                 app:layout_constraintTop_toBottomOf="@+id/navDot2" />
 
             <Button
                 android:id="@+id/button4"
-                android:layout_width="75dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="12dp"
-                android:text="Button"
+                android:layout_width="43dp"
+                android:layout_height="41dp"
+                android:layout_marginStart="48dp"
+                android:background="@drawable/phone_btn_img"
                 app:layout_constraintStart_toEndOf="@+id/button3"
                 app:layout_constraintTop_toTopOf="@+id/button3" />
 
