--- a/app/src/main/res/layout/fast_food_layout_listitems.xml
+++ b/app/src/main/res/layout/fast_food_layout_listitems.xml
@@ -12,7 +12,7 @@
         android:layout_height="120dp"
         app:cardCornerRadius="4dp"
         app:cardMaxElevation="2dp"
-        android:layout_centerInParent="true">
+        android:layout_centerInParent="tru>
 
     </android.support.v7.widget.CardView>
 
