--- a/app/src/main/res/layout/specific_food_content.xml
+++ b/app/src/main/res/layout/specific_food_content.xml
@@ -32,12 +32,12 @@
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <Button
-        android:id="@+id/food_phone_icon"
+        android:id="@+id/food_menu_icon"
         android:layout_width="35dp"
         android:layout_height="32dp"
         android:layout_marginStart="62dp"
         android:layout_marginTop="40dp"
-        android:background="@drawable/phone_btn_img"
+        android:background="@drawable/menu_icon"
         app:layout_constraintStart_toEndOf="@+id/food_web_icon"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -47,6 +47,19 @@
         android:layout_height="207dp"
         android:layout_marginStart="40dp"
         android:layout_marginTop="48dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include2" />
+
+    <TextView
+        android:id="@+id/specific_food_name"
+        android:layout_width="wrap_content"
+        android:layout_height="24dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="Food Name Here"
+        app:layout_constraintBottom_toTopOf="@+id/imageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include2" />
 
