--- a/app/src/main/res/layout/specific_food_content.xml
+++ b/app/src/main/res/layout/specific_food_content.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/map_btn_img"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_routes" />
 
     <Button
         android:id="@+id/food_web_icon"
@@ -30,7 +30,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/website_btn_img"
         app:layout_constraintStart_toEndOf="@+id/food_map_icon"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_routes" />
 
     <Button
         android:id="@+id/food_menu_icon"
@@ -40,10 +40,10 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/menu_icon"
         app:layout_constraintStart_toEndOf="@+id/food_web_icon"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView_routes" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/imageView_routes"
         android:layout_width="299dp"
         android:layout_height="207dp"
         android:layout_marginStart="40dp"
@@ -60,7 +60,7 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="Food Name Here"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/imageView_routes"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include2" />
 
