--- a/app/src/main/res/layout/specific_food_content.xml
+++ b/app/src/main/res/layout/specific_food_content.xml
@@ -20,7 +20,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/map_btn_img"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/foodPic" />
 
     <Button
         android:id="@+id/food_web_icon"
@@ -30,7 +30,7 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/website_btn_img"
         app:layout_constraintStart_toEndOf="@+id/food_map_icon"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/foodPic" />
 
     <Button
         android:id="@+id/food_menu_icon"
@@ -40,10 +40,10 @@
         android:layout_marginTop="40dp"
         android:background="@drawable/menu_icon"
         app:layout_constraintStart_toEndOf="@+id/food_web_icon"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/foodPic" />
 
     <ImageView
-        android:id="@+id/imageView"
+        android:id="@+id/foodPic"
         android:layout_width="299dp"
         android:layout_height="207dp"
         android:layout_marginStart="40dp"
@@ -60,9 +60,19 @@
         android:layout_marginTop="8dp"
         android:gravity="center"
         android:text="Food Name Here"
-        app:layout_constraintBottom_toTopOf="@+id/imageView"
+        app:layout_constraintBottom_toTopOf="@+id/foodPic"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/include2" />
+
+    <TextView
+        android:id="@+id/specific_food_description"
+        android:layout_width="341dp"
+        android:layout_height="160dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="55dp"
+        android:text="Description"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/food_map_icon" />
 
 
 </android.support.constraint.ConstraintLayout>
